language/move-lang/tests/move_check/parser/function_without_body.exp
error: 

   ┌── tests/move_check/parsing/function_without_body.move:3:9 ───
   │
 3 │     fn();
   │         ^ Unrecognized Token: ;
   ·
 3 │     fn();
   │         - Expected:  ":", "acquires", "{",
   │

